# canary

./: .canaryignore  .crush.json  .envrc  .gitignore  .gitmodules  .goreleaser.yaml  .pre-commit-config.yaml  .prettierignore  .prettierignore.local  AGENT_INTEGRATION.md  AUTO_MIGRATION_SUMMARY.md  CHECKLIST.md  CLAUDE.md  CLI_COMMANDS.md  CLI_COMMANDS_REFACTOR.md  CLI_REFACTOR_SUMMARY.md  CRUSH.md  Dockerfile  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_STORAGE.md  LICENSE  LICENSE_HEADER  MIGRATIONS.md  Makefile  NEXT.md  PLAN_PHASE_4.md  README.md  README_CANARY.md  SPEC_KIT_CLI.md  final-status.csv  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  openai.go  scan.go  scan_test.go  (+13 more)
cli/: cmds.go
specs/spec-kit-repo/: README.md  pyproject.toml
specs/spec-kit-repo/.canary/: canary.db
specs/spec-kit-repo/docs/: index.md  local-development.md  quickstart.md
specs/spec-kit-repo/memory/: constitution.md
specs/spec-kit-repo/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
specs/spec-kit-repo/src/specify_cli/: __init__.py
specs/spec-kit-repo/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/spec-kit-repo/templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
specs/spec-kit-repo/tests/: README.md  conftest.py
specs/spec-kit-repo/tests/spec_kit/: __init__.py  test_agent_support.py  test_automation_scripts.py  test_cli_features.py  (+5 more)
(+437 files in other folders)
